# WaterNet_vectorize

./: ReadMe.md  license.txt  setup.cfg
scripts/: calculate_length.py  random_fixes.py  run_drop_streams.py  run_stream_width_calculator.py
src/wwvec/: paths.py
src/wwvec/basin_vectorization/: basin_data_class.py  cut_bbox_raster.py
src/wwvec/polygon_vectorization/: _tools.py  clean_merged_data.py  polygonize_all_intersecting_geometry.py
src/wwvec/width_calculation/: basin_polygonizer.py  drop_and_reorder_streams.py  stream_width.py
