[semantic_release]
version_variable = wwvec/__init__.py:__version__


[metadata]
name = wwvec
description = A package for vectorizing WaterNet outputs.
version = attr:wwvec.__version__
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Cython
    Programming Language :: Python

[options]
package_dir=
    =src
packages=find:
include_package_data = True
setup_requires =
    cython>=0.29.*
install_requires =
    fastparquet==0.8.3
    geopandas>=0.14.3
    geopy==2.2.0
    networkx==3.0
    numpy==1.24.1
    pandas==2.0.1
    pyarrow>=12.0.0
    PyYAML==6.0
    rasterio==1.3.6
    scikit-learn==1.2.1
    rioxarray==0.13.4
    Shapely>=2.0.1
[options.packages.find]
where=src
exclude=
    data
    build
    cache
    scripts
[options.package_data]
* = *.md, *.txt